# netflix/src/api/controllers/netflix.controller.ts
@@ -58,16 +58,25 @@ function createMovie(req: Request, res: Response){
 }
 
 function deleteMovie(req: Request, res: Response){
-  res.status(204).json({
+  res.status(200).json({
     "message": "You deleted the movie successfully."
   });
 }
 
 function updateMovie(req: Request, res: Response){
-  res.status(200);
+  res.status(200).json({
+        "title": "Transformers",
+        "description": "Transformers (2007) is a high-octane science fiction action film.",
+        "directed-by": "Michael Bay",
+        "actors": ["Shia LaBeouf", "Megan Fox"],
+        "categories": ["sci-fi", "action"],
+        "type": "Movie",
+        "id": 3
+  });
 }
 
 function rentMovieById(req: Request, res: Response){
+  console.log("rentMovieById");
   res.status(200).json({
         "message": "You rented the movie successfully."
   });
